Updated footer - fixed sponsors layout issue

--- a/mainStyles.css
+++ b/mainStyles.css
@@ -52,6 +52,10 @@ body {
     background-color: #ffffff;
 }
 
+.col-md-2 {
+    background-color: white;
+}
+
 
 .Banner {
     background-color: #ffffff;
